--- a/Logistic_Regression.ipynb
+++ b/Logistic_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMj+nahb8AGWe7VALbYwLWH",
+      "authorship_tag": "ABX9TyMl0aucjRr5++uEqDkCUpR1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -668,7 +668,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**implementing logistic regression**"
+        "##**implementing Naive Bayes Classification**"
       ],
       "metadata": {
         "id": "bQu-W5N-008f"
